Added Header Material UI styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       type="image/svg+xml"
       href="https://icon-library.com/images/icon-for-mobile/icon-for-mobile-27.jpg"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobile Shop - Preact</title>
   </head>
