--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobile Shop - Preact</title>
